// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify basic render 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-page__main-group"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`Verify bottom shadow 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-page__main-group pf-m-shadow-bottom"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`Verify bottom sticky 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-page__main-group pf-m-sticky-bottom"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`Verify overflow scroll 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-page__main-group pf-m-overflow-scroll"
    role="region"
    tabindex="0"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`Verify top shadow 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-page__main-group pf-m-shadow-top"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`Verify top sticky 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-page__main-group pf-m-sticky-top"
  >
    test
  </div>
</DocumentFragment>
`;
